fixed visibility in edit mode

--- a/less/moodle/course.less
+++ b/less/moodle/course.less
@@ -97,7 +97,7 @@
     margin: .5em 0;
 }
 .editing .section .activity:hover {
-    background-color: @grayLighter;
+    background-color: @editHover;
 }
 .course-content .current {
     background-color: @infoBackground;
